Updated to use partman for partition creating

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: timescale/timescaledb-ha:pg17
+    build: .
     container_name: ztbus_pg
     environment:
       POSTGRES_USER: ztbus
